--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -3,11 +3,9 @@
 <head th:replace="fragments/header :: head">
 </head>
 <body>
-<div th:if="${successMessage}">
-    <script>
-        alert([[${successMessage}]]);
-    </script>
-</div>
+<script th:if="${message}" th:inline="javascript">
+    alert([[${message}]]);
+</script>
 <div th:replace="fragments/header :: header"></div>
 <div th:replace="fragments/nav :: nav"></div>
 <div class="login-container">
@@ -25,7 +23,7 @@
         </div>
         <div class="form-group">
             <label th:for="*{password}">비밀번호</label>
-            <input type="password" th:field="*{password}" id="password" name="password" placeholder="비밀번호를 입력하세요">
+            <input type="password" th:field="*{password}" id="password" name="password" placeholder="비밀번호를 입력하세요" autocomplete="current-password">
         </div>
         <button type="submit" class="login-btn">로그인</button>
     </form>
