--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,7 +17,7 @@
         <div class="header-right">
             <!-- 로그인한 사용자 -->
             <div sec:authorize="isAuthenticated()">
-                <a href="/member/mypage" class="btn">마이페이지</a>
+                <a href="/member/myinfo" class="btn">내 정보</a>
                 <a href="/member/logout" class="btn">로그아웃</a>
             </div>
             <!-- 로그인하지 않은 사용자 -->
