--- a/src/main/resources/templates/member/edit.html
+++ b/src/main/resources/templates/member/edit.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/header :: head">
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
 
+<div class="info-container">
+    <h2>회원 정보 수정</h2>
+
+    <form th:action="@{/member/edit}" th:method="post" th:object="${memberDto}">
+        <div class="info-group">
+            <label for="nickname">닉네임</label>
+            <input type="text" id="nickname" th:field="${memberDto.nickname}">
+            <div th:if="${#fields.hasErrors('nickname')}" class="error-message">
+                <p th:each="err : ${#fields.errors('nickname')}" th:text="${err}"></p>
+            </div>
+        </div>
+
+        <div class="info-group">
+            <label for="password">기존 비밀번호</label>
+            <input type="password" id="password" th:field="${memberDto.password}">
+            <div th:if="${#fields.hasErrors('password')}" class="error-message">
+                <p th:each="err : ${#fields.errors('password')}" th:text="${err}"></p>
+            </div>
+        </div>
+
+        <div class="info-group">
+            <label for="newPassword">새로운 비밀번호</label>
+            <input type="password" id="newPassword" th:field="${memberDto.newPassword}">
+            <div th:if="${#fields.hasErrors('newPassword')}" class="error-message">
+                <p th:each="err : ${#fields.errors('newPassword')}" th:text="${err}"></p>
+            </div>
+        </div>
+
+        <div class="info-group">
+            <label for="newPasswordCheck">새로운 비밀번호 확인</label>
+            <input type="password" id="newPasswordCheck" th:field="${memberDto.newPasswordCheck}">
+            <div th:if="${#fields.hasErrors('newPasswordCheck')}" class="error-message">
+                <p th:each="err : ${#fields.errors('newPasswordCheck')}" th:text="${err}"></p>
+            </div>
+        </div>
+
+        <div class="btn-container">
+            <button class="btn btn-edit" type="submit" th:onclick="|location.href='@{/member/edit}'|">확인</button>
+            <button class="btn btn-cancel" type="button" th:onclick="|location.href='@{/member/myinfo}'|">취소</button>
+        </div>
+    </form>
+</div>
+
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
